--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -1,9 +1,15 @@
-body { background-color: #fff; color: #333; }
+body { background-color: #fff; color: #333;}
 
 body, p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size:   18px;
   line-height: 18px;
+}
+
+@media screen and (max-width: 800px){
+	.table .doHide{
+		display: none;	
+	}
 }
 
 pre {
