--- a/app/views/gists/_gist.html.erb
+++ b/app/views/gists/_gist.html.erb
@@ -1,9 +1,9 @@
-<tbody >
+<tbody>
       <tr>
-        <td class="bg-primary"><%= gist.snippet[0,25] %></td>
+        <td class="doHide bg-primary"> <%= gist.snippet[0,25] %></td>
         <td><%= gist.lang %></td>
         <td><%= gist.description %></td>
-        <td> <%=link_to 'Show Whole', gist,class:'btn btn-success btn-block' %> </td>
+        <td> <%=link_to 'Show', gist,class:'btn btn-success btn-block' %> </td>
 	<td><%= link_to 'Edit', edit_gist_path(gist),class:'btn btn-warning btn-block' %></td>
         <td><%= link_to 'Destroy', gist, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-warning btn-danger btn-block' %></td>
       </tr>
